@@ -4,6 +4,9 @@
 	  is backed off to.
 	- RD flag not enabled for dnssec-blacklisted tries, unless necessary.
 	- pickup ldns compile fix, libdl for libcrypto.
+	- log 'tcp connect: connection timed out' only in high verbosity.
+	- unbound-control log_reopen command.
+	- moved get_option code from unbound-checkconf to util/config_file.c
 
 17 February 2010: Wouter
 	- Disregard DNSKEY from authority section for chain of trust.
